# create3

./: CMakeLists.txt  README.md
client/: CMakeLists.txt
client/examples/: 01_connect.c  02_dock_undock.c  03_move_velocity.c  04_rotate.c  05_arc.c  06_led_animation_test.c  06_led_test.c  07_play_audio.c  07_sensors.c  CMakeLists.txt
client/examples/01_connect/: CMakeLists.txt
client/examples/02_move_velocity/: 02_move_velocity.c
client/include/kipr/create3/: ClientDebouncer.hpp
client/include/kipr/create3/client/: AudioNote.hpp  BumpSensor.hpp  Client.hpp  ClientImpl.hpp  Direction.hpp  Duration.hpp  Follow.hpp  HazardDetection.hpp  HazardDetectionVector.hpp  IrIntensity.hpp  IrIntensityVector.hpp  LedAnimationType.hpp  LedColor.hpp  Lightring.hpp  Odometry.hpp  Pose.hpp  Quaternion.hpp  Twist.hpp  Vector3.hpp  audio_note.h  bump_sensor.h  client.h  direction.h  duration.h  euler.h  follow.h  hazard_detection.h  ir_intensity.h  ir_intensity_vector.h  led_animation_type.h  led_color.h  lightring.h  odometry.h  pose.h  quaternion.h  test_utils.hpp  twist.h  vector3.h
client/include/kipr/create3/client/detail/: DelayedCall.hpp  FunctionTraits.hpp  MostRecentDelayedCallExecutor.hpp
client/src/kipr/create3/client/: Client.cpp  ClientImpl.cpp  bump_sensor_c.cpp  client_c.cpp  direction_c.cpp  duration_c.cpp  euler_c.cpp  led_animation_type_c.cpp  test_utils.cpp
client/src/kipr/create3/client/detail/: MostRecentDelayedCallExecutor.cpp
client/test/kipr/create3/client/: Client.test.cpp
client/test/kipr/create3/client/detail/: MostRecentDelayedCallExecutor.test.cpp
cmder/: CMakeLists.txt
cmder/src/kipr/create3/cmder/: main.cpp
common/: CMakeLists.txt
common/schema/kipr/create3/: create3.capnp
server/: CMakeLists.txt
server/src/kipr/create3/server/: main.cpp
